# Konstrukcija-kompilatora-projekat

./: .gitignore  AlwaysInlineFuncInlinerPass.cpp  CMakeLists.txt  README.md  generate_ir.sh
AlwaysInlinePass/: AlwaysInline.cpp  CMakeLists.txt  README.md  passArg
AlwaysInlinePass/examples/: InlinePrint.cpp
DeadArgumentEliminationPass/: CMakeLists.txt  DeadArgumentElimination.cpp  passArg
DeadArgumentEliminationPass/examples/: uselessArgument.cpp
IdenticalBBMergePass/: CMakeLists.txt  IdenticalBBMerge.cpp  README.md  passArg
IdenticalBBMergePass/examples/: BranchingCanMerge.cpp  BranchingDoNotMerge.cpp  IdenticalBranching.cpp
ImplicitMulOperandUpcastPass/: CMakeLists.txt  ImplicitMulOperandUpcast.cpp  README.md  passArg
ImplicitMulOperandUpcastPass/examples/: Branching.cpp  SingleBlock.cpp
LoopInvariantCodeMotionPass/: CMakeLists.txt  LoopInvariantCodeMotion.cpp  README.md  passArg
LoopInvariantCodeMotionPass/examples/: not_so_simple.cpp  random.cpp  simple.cpp
PartialRedundancyEliminationPass/: CMakeLists.txt  PartialRedundancyElimination.cpp
PartialRedundancyEliminationPass/examples/: random.cpp
examples/: BasicFunction.cpp  InlinePrint.cpp
